--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,9 @@ Icon
 # License
 # ---------------
 /site/config/.license
+
+# Contents
+/content/*
+!/content/site.txt
+!/content/home
+!/content/error
