--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "author": "Daniel Büchele <daniel@buechele.cc>",
   "license": "MIT",
   "devDependencies": {
-    "@prettier/plugin-php": "^0.11.2",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.2.0",
     "gulp-concat": "^2.6.1",
     "gulp-sass": "^4.0.2",
     "gulp-uglify": "^3.0.2",
-    "node-sass": "^4.12.0"
+    "node-sass": "^4.12.0",
+    "prettier": "^1.18.2"
   },
   "dependencies": {
     "bootstrap-sass": "^3.4.1",
