--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,15 @@ before_install:
   - chmod 600 ./deploy_rsa
   - ssh-add ./deploy_rsa
 script:
-  - yarn
   - composer install
+  - yarn
   - yarn gulp
-  - rm -rf content node_modules media
+  - rm -rf content node_modules media site/cache
 deploy:
   provider: script
   skip_cleanup: true
-  script: rsync -r --delete-after --quiet $TRAVIS_BUILD_DIR kultwiki@kulturspektakel.de:html
+  script:
+    - rsync -r --delete-after --quiet $TRAVIS_BUILD_DIR kultwiki@kulturspektakel.de:html
+    - ssh kultwiki@kulturspektakel.de 'rm -rf html/site/cache'
   on:
     branch: master
