--- a/.htaccess
+++ b/.htaccess
@@ -7,6 +7,13 @@
 # http://yourdomain.com/about-us/team
 RewriteEngine on
 
+# HTTPS redirect
+RewriteCond %{HTTP_HOST} !localhost
+RewriteCond %{HTTP_HOST} ^www\. [NC,OR]
+RewriteCond %{HTTPS} off
+RewriteCond %{HTTP_HOST} ^(?:www\.)?(.+)$ [NC]
+RewriteRule ^ https://%1%{REQUEST_URI} [R=301,L,NE]
+
 # make sure to set the RewriteBase correctly
 # if you are running the site in a subfolder.
 # Otherwise links or the entire site will break.
