--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "Kulturspektakel/website",
+  "name": "kulturspektakel/website",
   "description": "Kulturspektakel Webseite",
   "type": "project",
   "keywords": [
