--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
   - eval "$(ssh-agent -s)"
   - chmod 600 ./deploy_rsa
   - ssh-add ./deploy_rsa
+  - rm ./deploy_rsa
 script:
   - composer install
   - yarn
