--- a/site/blueprints/site.yml
+++ b/site/blueprints/site.yml
@@ -51,3 +51,79 @@ tabs:
               sociallinks:
                 label: Social Media Links
                 type: textarea
+  preislisten:
+    columns:
+      - width: 2/3
+        sections:
+          preislisten:
+            type: fields
+            fields:
+              buden:
+                label: Preislisten
+                type: structure
+                sortable: false
+                sortBy: name
+                columns:
+                  name:
+                    width: 1/4
+                  products:
+                    width: 3/4
+                fields:
+                  name:
+                    label: Bude
+                    type: text
+                    required: true
+                  products:
+                    label: Produkte
+                    type: structure
+                    sortable: true
+                    columns:
+                      name:
+                        width: 3/4
+                      price:
+                        width: 1/4
+                        after: €
+                        align: right
+                    fields:
+                      name:
+                        label: Name
+                        type: text
+                        required: true
+                        width: 3/4
+                      price:
+                        label: Preis
+                        type: number
+                        required: true
+                        width: 1/4
+                        after: €
+                        step: 0.5
+                        min: 0.5
+      - width: 1/3
+        sections:
+          devices:
+            type: fields
+            fields:
+              devices:
+                label: Geräte
+                type: structure
+                sortable: false
+                sortBy: id
+                fields:
+                  id:
+                    label: Geräte ID
+                    type: text
+                    placeholder: 00:00:00
+                    required: true
+                    converter: upper
+                    validate:
+                      match: '/[0-9A-F]{2}:[0-9A-F]{2}:[0-9A-F]{2}$/'
+                    minlength: 8
+                    maxlength: 8
+                  bude:
+                    label: Bude
+                    type: select
+                    options: query
+                    query:
+                      fetch: site.Buden.toStructure
+                      text: '{{ structureItem.name }}'
+                      value: '{{ structureItem.name }}'
