--- a/.htaccess
+++ b/.htaccess
@@ -27,7 +27,7 @@ RewriteRule ^ https://%1%{REQUEST_URI} [R=301,L,NE]
 # In some environments it's necessary to
 # set the RewriteBase to:
 #
-# RewriteBase /
+RewriteBase /
 
 # block files and folders beginning with a dot, such as .git
 # except for the .well-known folder, which is used for Let's Encrypt and security.txt
