--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,10 @@
     "getkirby/cms": "^3.0"
   },
   "config": {
-    "optimize-autoloader": true
+    "optimize-autoloader": true,
+    "allow-plugins": {
+      "getkirby/composer-installer": true
+    }
   },
   "scripts": {
     "post-install-cmd": "cd site/plugins/tags && composer install && cd ../algolia && composer install"
