--- a/.htaccess
+++ b/.htaccess
@@ -17,6 +17,8 @@ RewriteCond %{HTTPS} off
 RewriteCond %{HTTP_HOST} ^(?:www\.)?(.+)$ [NC]
 RewriteRule ^ https://%1%{REQUEST_URI} [R=301,L,NE]
 
+Redirect 301 /speisekarte https://app.kulturspektakel.de/contactless/print
+
 # make sure to set the RewriteBase correctly
 # if you are running the site in a subfolder.
 # Otherwise links or the entire site will break.
