--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.4",
+    "@fontsource/space-grotesk": "^5.0.8",
     "@remix-run/node": "~1.19.3",
     "@remix-run/react": "~1.19.3",
     "@remix-run/serve": "~1.19.3",
+    "@remix-validated-form/with-zod": "^2.0.6",
     "apollo-link-scalars": "^4.0.2",
     "chakra-ui-steps": "^2.1.0",
-    "formik": "^2.4.3",
     "framer-motion": "^6.5.1",
     "graphql": "^16.8.0",
     "graphql-scalars": "^1.22.2",
@@ -30,7 +31,9 @@
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-use": "^17.4.0",
-    "remix-typedjson": "^0.2.0"
+    "remix-typedjson": "^0.2.0",
+    "remix-validated-form": "^5.1.0",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
