--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-use": "^17.4.0",
+    "remix-params-helper": "^0.4.10",
+    "remix-routes": "^1.4.4",
     "remix-typedjson": "^0.2.0",
     "remix-validated-form": "^5.1.0",
     "zod": "^3.22.2"
