--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@remix-run/node": "~1.19.3",
     "@remix-run/react": "~1.19.3",
     "@remix-run/serve": "~1.19.3",
-    "@remix-validated-form/with-zod": "^2.0.6",
     "apollo-link-scalars": "^4.0.2",
     "chakra-ui-steps": "^2.1.0",
+    "formik": "^2.4.3",
     "framer-motion": "^6.5.1",
     "graphql": "^16.8.0",
     "graphql-scalars": "^1.22.2",
@@ -27,16 +27,11 @@
     "isbot": "^3.6.5",
     "markdown-to-jsx": "^7.3.2",
     "react": "^18.2.0",
-    "react-beforeunload": "^2.6.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-use": "^17.4.0",
-    "remix-params-helper": "^0.4.10",
     "remix-routes": "^1.4.4",
-    "remix-typedjson": "^0.2.0",
-    "remix-validated-form": "^5.1.0",
-    "zod": "^3.22.2",
-    "zod-form-data": "^2.0.1"
+    "remix-typedjson": "^0.2.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
