--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.4",
-    "@fontsource/space-grotesk": "^5.0.8",
     "@remix-run/node": "~1.19.3",
     "@remix-run/react": "~1.19.3",
     "@remix-run/serve": "~1.19.3",
@@ -44,7 +43,8 @@
     "@types/react-dom": "^18.0.8",
     "eslint": "^8.47.0",
     "prettier": "^3.0.2",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "vercel": "^32.1.0"
   },
   "engines": {
     "node": ">=14"
