--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "routes": "remix-routes --watch"
   },
   "dependencies": {
-    "@apollo/client": "^3.8.1",
-    "@chakra-ui/icons": "^2.1.0",
-    "@chakra-ui/react": "^2.3.6",
+    "@apollo/client": "^3.8.5",
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.4",
@@ -19,21 +19,22 @@
     "@remix-run/serve": "~1.19.3",
     "apollo-link-scalars": "^4.0.2",
     "chakra-ui-steps": "^2.1.0",
-    "downshift": "^8.1.0",
-    "formik": "^2.4.3",
+    "downshift": "^8.2.2",
+    "formik": "^2.4.5",
     "framer-motion": "^6.5.1",
-    "graphql": "^16.8.0",
+    "graphql": "^16.8.1",
     "graphql-scalars": "^1.22.2",
     "hex-rgb": "^5.0.0",
-    "isbot": "^3.6.5",
+    "isbot": "^3.7.0",
     "markdown-to-jsx": "^7.3.2",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-use": "^17.4.0",
-    "remix-routes": "^1.4.4",
-    "remix-typedjson": "^0.2.0",
+    "remix-routes": "^1.4.5",
+    "remix-typedjson": "^0.2.2",
+    "remix-utils": "^6.6.0",
     "tomo-typeahead": "^0.0.6"
   },
   "devDependencies": {
@@ -44,13 +45,13 @@
     "@parcel/watcher": "^2.3.0",
     "@remix-run/dev": "~1.19.3",
     "@remix-run/eslint-config": "~1.19.3",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.0.8",
+    "@types/react": "^18.2.25",
+    "@types/react-dom": "^18.2.10",
     "concurrently": "^8.2.1",
-    "eslint": "^8.47.0",
-    "prettier": "^3.0.2",
+    "eslint": "^8.50.0",
+    "prettier": "^3.0.3",
     "typescript": "^4.8.4",
-    "vercel": "^32.1.0"
+    "vercel": "^32.4.1"
   },
   "engines": {
     "node": ">=14"
