--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "hex-rgb": "^5.0.0",
     "isbot": "^3.7.0",
     "markdown-to-jsx": "^7.3.2",
-    "react": "^18.2.0",
+    "react": "^18.3.0-canary-dddfe6882-20231005",
     "react-confetti": "^6.1.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.0-canary-dddfe6882-20231005",
     "react-facebook-pixel": "^1.0.4",
     "react-icons": "^4.11.0",
     "react-use": "^17.4.0",
