--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "hex-rgb": "^5.0.0",
     "isbot": "^3.7.0",
     "markdown-to-jsx": "^7.3.2",
+    "photoswipe": "^5.4.2",
     "react": "^18.3.0-canary-dddfe6882-20231005",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.0-canary-dddfe6882-20231005",
     "react-facebook-pixel": "^1.0.4",
     "react-icons": "^4.11.0",
+    "react-photoswipe-gallery": "^2.2.7",
     "react-use": "^17.4.0",
     "remix-routes": "^1.4.5",
     "remix-typedjson": "^0.2.2",
