--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.4",
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@remix-run/node": "~1.19.3",
     "@remix-run/react": "~1.19.3",
     "@remix-run/serve": "~1.19.3",
