--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@remix-run/node": "~2.3.1",
     "@remix-run/react": "~2.3.1",
     "@remix-run/serve": "~2.3.1",
-    "apollo-link-scalars": "^4.0.2",
     "chakra-ui-steps": "^2.1.0",
     "downshift": "^8.2.3",
     "formik": "^2.4.5",
@@ -32,9 +31,10 @@
     "photoswipe": "^5.4.3",
     "react": "^18.3.0-canary-dddfe6882-20231005",
     "react-confetti": "^6.1.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.3.0-canary-dddfe6882-20231005",
     "react-facebook-pixel": "^1.0.4",
-    "react-icons": "^4.11.0",
+    "react-icons": "^4.12.0",
     "react-photoswipe-gallery": "^3.0.0",
     "react-use": "^17.4.2",
     "remix-routes": "^1.5.0",
@@ -50,13 +50,13 @@
     "@parcel/watcher": "^2.3.0",
     "@remix-run/dev": "~2.3.1",
     "@remix-run/eslint-config": "~2.3.1",
-    "@types/react": "^18.2.43",
+    "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
     "concurrently": "^8.2.2",
     "eslint": "^8.55.0",
     "prettier": "^3.1.1",
     "typescript": "^5.3.3",
-    "vercel": "^32.4.1"
+    "vercel": "^32.7.2"
   },
   "engines": {
     "node": ">=14"
