--- a/.graphqlrc.yml
+++ b/.graphqlrc.yml
@@ -7,11 +7,16 @@ generates:
       - typescript
       - typescript-operations
       - typescript-react-apollo
+  ./app/types/graphql.schema.json:
+    plugins:
+      - introspection
+    config:
+      minify: true
 config:
   withMutationFn: true
   scalars:
-    Date: string
-    DateTime: string
+    Date: Date
+    DateTime: Date
 hooks:
   afterOneFileWrite:
     - prettier --write
