--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "isolatedModules": true,
     "esModuleInterop": true,
     "jsx": "react-jsx",
-    "moduleResolution": "node",
+    "moduleResolution": "Bundler",
+    "skipLibCheck": true,
     "resolveJsonModule": true,
     "target": "ES2019",
     "strict": true,
