--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@remix-run/node": "~2.3.1",
     "@remix-run/react": "~2.3.1",
     "@remix-run/serve": "~2.3.1",
+    "apollo-link-scalars": "^4.0.3",
     "chakra-ui-steps": "^2.1.0",
     "downshift": "^8.2.3",
     "formik": "^2.4.5",
