--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "build": "remix build",
+    "build": "remix build --sourcemap && sentry-upload-sourcemaps --org kulturspektakel --project website",
     "dev": "concurrently \"remix dev\" \"yarn graphql\" \"yarn routes\"",
     "start": "remix-serve build",
     "typecheck": "tsc",
@@ -19,6 +19,7 @@
     "@remix-run/node": "~2.3.1",
     "@remix-run/react": "~2.3.1",
     "@remix-run/serve": "~2.3.1",
+    "@sentry/remix": "^7.89.0",
     "apollo-link-scalars": "^4.0.3",
     "chakra-ui-steps": "^2.1.0",
     "downshift": "^8.2.3",
