--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.4",
     "@googlemaps/react-wrapper": "^1.1.35",
-    "@remix-run/node": "~2.3.1",
-    "@remix-run/react": "~2.3.1",
-    "@remix-run/serve": "~2.3.1",
-    "@sentry/remix": "^7.89.0",
+    "@remix-run/node": "~2.4.0",
+    "@remix-run/react": "~2.4.0",
+    "@remix-run/serve": "~2.4.0",
+    "@sentry/remix": "^7.90.0",
     "apollo-link-scalars": "^4.0.3",
     "chakra-ui-steps": "^2.1.0",
     "downshift": "^8.2.3",
@@ -37,11 +37,12 @@
     "react-dom": "^18.3.0-canary-dddfe6882-20231005",
     "react-facebook-pixel": "^1.0.4",
     "react-icons": "^4.12.0",
-    "react-photoswipe-gallery": "^3.0.0",
+    "react-photoswipe-gallery": "^3.0.1",
     "react-use": "^17.4.2",
     "remix-routes": "^1.5.0",
+    "remix-sitemap": "^3.2.0",
     "remix-typedjson": "^0.4.1",
-    "remix-utils": "^7.3.0",
+    "remix-utils": "^7.4.0",
     "tomo-typeahead": "^0.0.6"
   },
   "devDependencies": {
@@ -50,15 +51,15 @@
     "@graphql-codegen/typescript-operations": "^4.0.1",
     "@graphql-codegen/typescript-react-apollo": "^4.1.0",
     "@parcel/watcher": "^2.3.0",
-    "@remix-run/dev": "~2.3.1",
-    "@remix-run/eslint-config": "~2.3.1",
+    "@remix-run/dev": "~2.4.0",
+    "@remix-run/eslint-config": "~2.4.0",
     "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.17",
+    "@types/react-dom": "^18.2.18",
     "concurrently": "^8.2.2",
-    "eslint": "^8.55.0",
+    "eslint": "^8.56.0",
     "prettier": "^3.1.1",
     "typescript": "^5.3.3",
-    "vercel": "^32.7.2"
+    "vercel": "^33.0.1"
   },
   "engines": {
     "node": ">=14"
