--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@remix-run/react": "~2.4.0",
     "@remix-run/serve": "~2.4.0",
     "@sentry/remix": "^7.90.0",
+    "@vercel/analytics": "^1.1.1",
     "apollo-link-scalars": "^4.0.3",
     "chakra-ui-steps": "^2.1.0",
     "downshift": "^8.2.3",
