--- a/package.json
+++ b/package.json
@@ -12,39 +12,39 @@
     "@badrap/bar-of-progress": "^0.2.2",
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.10.4",
+    "@emotion/react": "^11.11.3",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.4",
     "@googlemaps/react-wrapper": "^1.1.35",
-    "@remix-run/node": "~2.4.0",
-    "@remix-run/react": "~2.4.0",
-    "@remix-run/serve": "~2.4.0",
-    "@sentry/remix": "^7.90.0",
+    "@remix-run/node": "~2.4.1",
+    "@remix-run/react": "~2.4.1",
+    "@remix-run/serve": "~2.4.1",
+    "@sentry/remix": "^7.92.0",
     "@vercel/analytics": "^1.1.1",
     "@vercel/speed-insights": "^1.0.2",
     "apollo-link-scalars": "^4.0.3",
     "chakra-ui-steps": "^2.1.0",
-    "downshift": "^8.2.3",
+    "downshift": "^8.3.1",
     "formik": "^2.4.5",
     "framer-motion": "^6.5.1",
     "graphql": "^16.8.1",
     "graphql-scalars": "^1.22.4",
     "hex-rgb": "^5.0.0",
     "isbot": "^3.7.1",
-    "markdown-to-jsx": "^7.3.2",
+    "markdown-to-jsx": "^7.4.0",
     "photoswipe": "^5.4.3",
-    "react": "^18.3.0-canary-dddfe6882-20231005",
+    "react": "^18.2.0",
     "react-confetti": "^6.1.0",
     "react-countdown": "^2.3.5",
-    "react-dom": "^18.3.0-canary-dddfe6882-20231005",
+    "react-dom": "^18.2.0",
     "react-facebook-pixel": "^1.0.4",
     "react-icons": "^4.12.0",
     "react-photoswipe-gallery": "^3.0.1",
     "react-use": "^17.4.2",
-    "remix-routes": "^1.5.0",
+    "remix-routes": "^1.6.0",
     "remix-sitemap": "^3.2.0",
     "remix-typedjson": "^0.4.1",
-    "remix-utils": "^7.4.0",
+    "remix-utils": "^7.5.0",
     "tomo-typeahead": "^0.0.6"
   },
   "devDependencies": {
@@ -53,15 +53,15 @@
     "@graphql-codegen/typescript-operations": "^4.0.1",
     "@graphql-codegen/typescript-react-apollo": "^4.1.0",
     "@parcel/watcher": "^2.3.0",
-    "@remix-run/dev": "~2.4.0",
-    "@remix-run/eslint-config": "~2.4.0",
-    "@types/react": "^18.2.45",
+    "@remix-run/dev": "~2.4.1",
+    "@remix-run/eslint-config": "~2.4.1",
+    "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "concurrently": "^8.2.2",
     "eslint": "^8.56.0",
     "prettier": "^3.1.1",
     "typescript": "^5.3.3",
-    "vercel": "^33.0.1"
+    "vercel": "^33.0.2"
   },
   "engines": {
     "node": ">=14"
