--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       - name: install
-        run: yarn install
-      - name: deploy
-        run: yarn vercel --prod --token=${{ secrets.VERCEL_TOKEN }}
+        run: yarn
+      - name: create release
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_ORG:
+          SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT }}
+        run: |
+          yarn vercel build
+          yarn sentry-cli releases new $GITHUB_SHA
+          yarn sentry-upload-sourcemaps --release $GITHUB_SHA --buildPath .vercel/output/static --project $SENTRY_PROJECT --org $SENTRY_ORG
+          find .vercel/output/static/build -type f -name '*.map' -delete
+          yarn vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+          yarn sentry-cli releases finalize $GITHUB_SHA
