--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           yarn vercel build --prod
           yarn sentry-cli releases new $GITHUB_SHA
+          yarn sentry-cli sourcemaps inject .vercel/output
           yarn sentry-upload-sourcemaps --release $GITHUB_SHA --buildPath .vercel/output/static --project $SENTRY_PROJECT --org $SENTRY_ORG
-          find .vercel/output/static/build -type f -name '*.map' -delete
           yarn vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
           yarn sentry-cli releases finalize $GITHUB_SHA
