--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,6 @@ jobs:
         run: |
           yarn vercel build --prod
           yarn sentry-cli releases new $GITHUB_SHA
-          yarn sentry-cli sourcemaps inject .vercel/output
-          yarn sentry-cli sourcemaps upload .vercel/output --release $GITHUB_SHA --project $SENTRY_PROJECT --org $SENTRY_ORG
+          yarn sentry-upload-sourcemaps --release $GITHUB_SHA --org $SENTRY_ORG --project $SENTRY_PROJECT --urlPrefix /var/task .vercel/output/static 
           yarn vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
           yarn sentry-cli releases finalize $GITHUB_SHA
