--- a/package.json
+++ b/package.json
@@ -1,47 +1,47 @@
 {
   "scripts": {
-    "build": "remix build --sourcemap",
+    "build": "remix build --sourcemap && sentry-upload-sourcemaps --org kulturspektakel --project website --sourcemap",
     "dev": "concurrently \"remix dev\" \"yarn graphql\" \"yarn routes\"",
-    "start": "remix-serve build",
+    "start": "NODE_OPTIONS='--import ./instrumentation.server.mjs' remix-serve build",
     "typecheck": "tsc",
     "graphql": "graphql-codegen --config ./.graphqlrc.yml --watch",
     "routes": "remix-routes --watch"
   },
   "dependencies": {
-    "@apollo/client": "^3.9.11",
+    "@apollo/client": "^3.11.2",
     "@badrap/bar-of-progress": "^0.2.2",
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.4",
+    "@emotion/react": "^11.13.0",
     "@emotion/server": "^11.10.0",
-    "@emotion/styled": "^11.11.5",
+    "@emotion/styled": "^11.13.0",
     "@googlemaps/react-wrapper": "^1.1.35",
-    "@remix-run/node": "~2.9.0",
-    "@remix-run/react": "~2.9.0",
-    "@remix-run/serve": "~2.9.0",
-    "@sentry/remix": "^7.112.1",
-    "@vercel/analytics": "1.2.2",
-    "@vercel/speed-insights": "^1.0.10",
+    "@remix-run/node": "~2.11.0",
+    "@remix-run/react": "~2.11.0",
+    "@remix-run/serve": "~2.11.0",
+    "@sentry/remix": "^8.22.0",
+    "@vercel/analytics": "1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "apollo-link-scalars": "^4.0.3",
-    "chakra-ui-steps": "^2.1.0",
-    "downshift": "^8.4.0",
-    "formik": "^2.4.5",
-    "framer-motion": "^6.5.1",
-    "graphql": "^16.8.1",
+    "chakra-ui-steps": "2.0.4",
+    "downshift": "^9.0.7",
+    "formik": "^2.4.6",
+    "framer-motion": "^11.3.21",
+    "graphql": "^16.9.0",
     "graphql-scalars": "^1.23.0",
     "hex-rgb": "^5.0.0",
-    "isbot": "^5.1.4",
+    "isbot": "^5.1.13",
     "markdown-to-jsx": "^7.4.7",
-    "photoswipe": "^5.4.3",
-    "react": "^18.2.0",
+    "photoswipe": "^5.4.4",
+    "react": "^18.3.1",
     "react-confetti": "^6.1.0",
     "react-countdown": "^2.3.5",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-facebook-pixel": "^1.0.4",
-    "react-icons": "^5.1.0",
-    "react-photoswipe-gallery": "^3.0.1",
-    "react-use": "^17.5.0",
-    "remix-routes": "^1.7.3",
+    "react-icons": "^5.2.1",
+    "react-photoswipe-gallery": "^3.0.2",
+    "react-use": "^17.5.1",
+    "remix-routes": "^1.7.6",
     "remix-sitemap": "^3.2.0",
     "remix-typedjson": "^0.4.1",
     "remix-utils": "^7.6.0",
@@ -50,20 +50,20 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/introspection": "^4.0.3",
-    "@graphql-codegen/typescript-operations": "^4.2.0",
+    "@graphql-codegen/typescript-operations": "^4.2.3",
     "@graphql-codegen/typescript-react-apollo": "^4.3.0",
     "@parcel/watcher": "^2.4.1",
-    "@remix-run/dev": "~2.9.0",
-    "@remix-run/eslint-config": "~2.9.0",
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
+    "@remix-run/dev": "~2.11.0",
+    "@remix-run/eslint-config": "~2.11.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "concurrently": "^8.2.2",
-    "eslint": "^9.1.1",
-    "prettier": "^3.2.5",
-    "typescript": "^5.4.5",
-    "vercel": "^34.1.1"
+    "eslint": "^9.8.0",
+    "prettier": "^3.3.3",
+    "typescript": "^5.5.4",
+    "vercel": "^35.2.3"
   },
   "engines": {
-    "node": ">=14"
+    "node": ">=20.9"
   }
 }
