--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "build": "remix build --sourcemap && sentry-upload-sourcemaps --org kulturspektakel --project website --sourcemap",
-    "dev": "concurrently \"remix dev\" \"yarn graphql\" \"yarn routes\"",
+    "dev": "concurrently \"remix dev --manual\" \"yarn graphql\" \"yarn routes\"",
     "start": "NODE_OPTIONS='--import ./instrumentation.server.mjs' remix-serve build",
     "typecheck": "tsc",
     "graphql": "graphql-codegen --config ./.graphqlrc.yml --watch",
@@ -30,6 +30,7 @@
     "graphql": "^16.9.0",
     "graphql-scalars": "^1.23.0",
     "hex-rgb": "^5.0.0",
+    "iban-ts": "^0.4.0",
     "isbot": "^5.1.17",
     "markdown-to-jsx": "^7.5.0",
     "photoswipe": "^5.4.4",
@@ -45,7 +46,9 @@
     "remix-sitemap": "^3.2.0",
     "remix-typedjson": "^0.4.1",
     "remix-utils": "^7.6.0",
-    "tomo-typeahead": "^0.0.6"
+    "tomo-typeahead": "^0.0.6",
+    "zod": "^3.23.8",
+    "zod-formik-adapter": "^1.3.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
