--- a/package.json
+++ b/package.json
@@ -10,23 +10,23 @@
   "dependencies": {
     "@apollo/client": "^3.11.8",
     "@badrap/bar-of-progress": "^0.2.2",
-    "@chakra-ui/icons": "^2.1.1",
-    "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/icons": "^2.2.4",
+    "@chakra-ui/react": "2.8.2",
     "@emotion/react": "^11.13.3",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.13.0",
     "@googlemaps/react-wrapper": "^1.1.42",
-    "@remix-run/node": "~2.12.0",
-    "@remix-run/react": "~2.12.0",
-    "@remix-run/serve": "~2.12.0",
-    "@sentry/remix": "^8.30.0",
+    "@remix-run/node": "~2.13.1",
+    "@remix-run/react": "~2.13.1",
+    "@remix-run/serve": "~2.13.1",
+    "@sentry/remix": "^8.34.0",
     "@vercel/analytics": "1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "apollo-link-scalars": "^4.0.3",
     "chakra-ui-steps": "2.1.0",
     "downshift": "^9.0.8",
     "formik": "^2.4.6",
-    "framer-motion": "^11.5.4",
+    "framer-motion": "^11.11.8",
     "graphql": "^16.9.0",
     "graphql-scalars": "^1.23.0",
     "hex-rgb": "^5.0.0",
@@ -45,26 +45,26 @@
     "remix-routes": "^1.7.7",
     "remix-sitemap": "^3.2.0",
     "remix-typedjson": "^0.4.1",
-    "remix-utils": "^7.6.0",
+    "remix-utils": "^7.7.0",
     "tomo-typeahead": "^0.0.6",
     "zod": "^3.23.8",
     "zod-formik-adapter": "^1.3.0"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/cli": "^5.0.3",
     "@graphql-codegen/introspection": "^4.0.3",
-    "@graphql-codegen/typescript-operations": "^4.2.3",
+    "@graphql-codegen/typescript-operations": "^4.3.0",
     "@graphql-codegen/typescript-react-apollo": "^4.3.2",
     "@parcel/watcher": "^2.4.1",
-    "@remix-run/dev": "~2.12.0",
-    "@remix-run/eslint-config": "~2.12.0",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
+    "@remix-run/dev": "~2.13.1",
+    "@remix-run/eslint-config": "~2.13.1",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
     "concurrently": "^9.0.1",
-    "eslint": "^9.10.0",
+    "eslint": "^9.12.0",
     "prettier": "^3.3.3",
-    "typescript": "^5.6.2",
-    "vercel": "^37.4.2"
+    "typescript": "^5.6.3",
+    "vercel": "^37.8.0"
   },
   "engines": {
     "node": ">=20.9"
