--- a/package.json
+++ b/package.json
@@ -11,27 +11,26 @@
     "@apollo/client": "^3.11.8",
     "@badrap/bar-of-progress": "^0.2.2",
     "@chakra-ui/icons": "^2.2.4",
-    "@chakra-ui/react": "2.8.2",
+    "@chakra-ui/react": "3.0.2",
     "@emotion/react": "^11.13.3",
     "@emotion/server": "^11.10.0",
-    "@emotion/styled": "^11.13.0",
     "@googlemaps/react-wrapper": "^1.1.42",
     "@remix-run/node": "~2.13.1",
     "@remix-run/react": "~2.13.1",
     "@remix-run/serve": "~2.13.1",
-    "@sentry/remix": "^8.34.0",
-    "@vercel/analytics": "1.3.1",
-    "@vercel/speed-insights": "^1.0.12",
+    "@sentry/remix": "^8.36.0",
+    "@vercel/analytics": "1.3.2",
+    "@vercel/speed-insights": "^1.0.14",
     "apollo-link-scalars": "^4.0.3",
     "downshift": "^9.0.8",
     "formik": "^2.4.6",
-    "framer-motion": "^11.11.8",
     "graphql": "^16.9.0",
     "graphql-scalars": "^1.23.0",
     "hex-rgb": "^5.0.0",
     "iban-ts": "^0.4.0",
     "isbot": "^5.1.17",
     "markdown-to-jsx": "^7.5.0",
+    "next-themes": "^0.3.0",
     "photoswipe": "^5.4.4",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
@@ -52,18 +51,18 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.3",
     "@graphql-codegen/introspection": "^4.0.3",
-    "@graphql-codegen/typescript-operations": "^4.3.0",
+    "@graphql-codegen/typescript-operations": "^4.3.1",
     "@graphql-codegen/typescript-react-apollo": "^4.3.2",
     "@parcel/watcher": "^2.4.1",
     "@remix-run/dev": "~2.13.1",
     "@remix-run/eslint-config": "~2.13.1",
-    "@types/react": "^18.3.11",
+    "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "concurrently": "^9.0.1",
-    "eslint": "^9.12.0",
+    "eslint": "^9.13.0",
     "prettier": "^3.3.3",
     "typescript": "^5.6.3",
-    "vercel": "^37.8.0"
+    "vercel": "^37.14.0"
   },
   "engines": {
     "node": ">=20.9"
