--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "zod-formik-adapter": "^1.3.0"
   },
   "devDependencies": {
+    "@chakra-ui/cli": "^3.1.1",
     "@graphql-codegen/cli": "^5.0.3",
     "@graphql-codegen/introspection": "^4.0.3",
     "@graphql-codegen/typescript-operations": "^4.3.1",
