--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "scripts": {
-    "build": "remix build --sourcemap && sentry-upload-sourcemaps --org kulturspektakel --project website --sourcemap",
-    "dev": "concurrently \"remix dev --manual\" \"yarn graphql\" \"yarn routes\" \"chakra typegen app/theme.ts --watch --strict\"",
-    "start": "NODE_OPTIONS='--import ./instrumentation.server.mjs' remix-serve build",
+    "build": "remix vite:build --sourcemap && sentry-upload-sourcemaps --org kulturspektakel --project website --sourcemap",
+    "dev": "concurrently \"remix vite:dev\" \"yarn graphql\" \"yarn routes\" \"chakra typegen app/theme.ts --watch --strict\"",
+    "start": "NODE_OPTIONS='--import ./instrumentation.server.mjs' remix-serve ./build/server/index.js",
     "typecheck": "tsc",
     "typegen": "chakra typegen app/theme.ts --strict",
     "graphql": "graphql-codegen --config ./.graphqlrc.yml --watch",
@@ -11,7 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.12.4",
     "@badrap/bar-of-progress": "^0.2.2",
-    "@chakra-ui/react": "3.2.3",
+    "@chakra-ui/react": "3.2.4",
     "@emotion/react": "^11.14.0",
     "@emotion/server": "^11.10.0",
     "@googlemaps/react-wrapper": "^1.1.42",
@@ -32,10 +32,10 @@
     "markdown-to-jsx": "^7.7.2",
     "next-themes": "^0.4.4",
     "photoswipe": "^5.4.4",
-    "react": "^18.3.1",
+    "react": "^19.0.0",
     "react-confetti": "^6.2.2",
     "react-countdown": "^2.3.6",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.0.0",
     "react-facebook-pixel": "^1.0.4",
     "react-icons": "^5.4.0",
     "react-photoswipe-gallery": "^3.0.2",
@@ -43,13 +43,14 @@
     "remix-routes": "^1.7.7",
     "remix-sitemap": "^3.2.0",
     "remix-typedjson": "^0.4.1",
-    "remix-utils": "^7.7.0",
+    "remix-utils": "^8.0.0",
     "tomo-typeahead": "^0.0.6",
+    "vite": "^6.0.7",
     "zod": "^3.24.1",
     "zod-formik-adapter": "^1.3.0"
   },
   "devDependencies": {
-    "@chakra-ui/cli": "^3.1.1",
+    "@chakra-ui/cli": "^3.2.4",
     "@graphql-codegen/cli": "^5.0.3",
     "@graphql-codegen/introspection": "^4.0.3",
     "@graphql-codegen/typescript-operations": "^4.4.0",
@@ -57,16 +58,18 @@
     "@parcel/watcher": "^2.5.0",
     "@remix-run/dev": "~2.15.2",
     "@remix-run/eslint-config": "~2.15.2",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "concurrently": "^9.1.1",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
+    "concurrently": "^9.1.2",
     "eslint": "^9.17.0",
     "prettier": "^3.4.2",
     "typescript": "^5.7.2",
-    "vercel": "^39.2.2"
+    "vercel": "^39.2.4",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "engines": {
     "node": ">=20.9"
   },
+  "type": "module",
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
