--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,6 @@
     "isolatedModules": true,
     "esModuleInterop": true,
     "jsx": "react-jsx",
-    "moduleResolution": "Bundler",
-    "skipLibCheck": true,
     "resolveJsonModule": true,
     "target": "ES2019",
     "strict": true,
@@ -16,8 +14,10 @@
     "paths": {
       "~/*": ["./app/*"]
     },
-    "module": "esnext",
-    // Remix takes care of building everything in `remix build`.
-    "noEmit": true
+    "noEmit": true,
+    "types": ["@remix-run/node", "vite/client"],
+    "skipLibCheck": true,
+    "module": "ESNext",
+    "moduleResolution": "Bundler"
   }
 }
