--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@badrap/bar-of-progress": "^0.2.2",
     "@chakra-ui/react": "^3.15.1",
     "@emotion/react": "^11.14.0",
+    "@prisma/client": "6.6.0",
     "@tanstack/react-router": "^1.115.3",
     "@tanstack/react-start": "^1.115.3",
     "apollo-link-scalars": "^4.0.3",
@@ -36,7 +37,9 @@
     "graphql-scalars": "^1.24.2",
     "hex-rgb": "^5.0.0",
     "markdown-to-jsx": "^7.7.4",
+    "markdown-to-txt": "^2.0.1",
     "photoswipe": "^5.4.4",
+    "prisma": "^6.6.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
