--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "@badrap/bar-of-progress": "^0.2.2",
     "@chakra-ui/react": "^3.15.1",
     "@emotion/react": "^11.14.0",
+    "@googlemaps/react-wrapper": "^1.2.0",
     "@prisma/client": "6.6.0",
+    "@tanstack/react-query": "^5.74.3",
     "@tanstack/react-router": "^1.115.3",
     "@tanstack/react-start": "^1.115.3",
+    "@twemoji/svg": "^15.0.0",
     "apollo-link-scalars": "^4.0.3",
     "graphql": "^16.10.0",
     "graphql-scalars": "^1.24.2",
@@ -41,9 +44,11 @@
     "photoswipe": "^5.4.4",
     "prisma": "^6.6.0",
     "react": "^19.1.0",
+    "react-countdown": "^2.3.6",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-photoswipe-gallery": "^3.1.1",
+    "ts-ics": "^2.0.5",
     "vinxi": "^0.5.4"
   }
 }
