--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@tanstack/react-start": "^1.115.3",
     "@twemoji/svg": "^15.0.0",
     "apollo-link-scalars": "^4.0.3",
+    "downshift": "^9.0.9",
     "graphql": "^16.10.0",
     "graphql-scalars": "^1.24.2",
     "hex-rgb": "^5.0.0",
@@ -48,6 +49,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-photoswipe-gallery": "^3.1.1",
+    "tomo-typeahead": "^0.0.6",
     "ts-ics": "^2.0.5",
     "vinxi": "^0.5.4"
   }
