--- a/package.json
+++ b/package.json
@@ -37,20 +37,26 @@
     "@twemoji/svg": "^15.0.0",
     "apollo-link-scalars": "^4.0.3",
     "downshift": "^9.0.9",
+    "formik": "^2.4.6",
     "graphql": "^16.10.0",
     "graphql-scalars": "^1.24.2",
     "hex-rgb": "^5.0.0",
+    "iban-ts": "^0.10.0",
     "markdown-to-jsx": "^7.7.4",
     "markdown-to-txt": "^2.0.1",
     "photoswipe": "^5.4.4",
     "prisma": "^6.6.0",
     "react": "^19.1.0",
+    "react-confetti": "^6.4.0",
     "react-countdown": "^2.3.6",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-photoswipe-gallery": "^3.1.1",
+    "react-use": "^17.6.0",
     "tomo-typeahead": "^0.0.6",
     "ts-ics": "^2.0.5",
-    "vinxi": "^0.5.4"
+    "vinxi": "^0.5.4",
+    "zod": "^3.24.3",
+    "zod-formik-adapter": "^1.3.0"
   }
 }
