--- a/package.json
+++ b/package.json
@@ -8,41 +8,45 @@
     "dev": "vinxi dev",
     "build": "vinxi build",
     "start": "vinxi start",
-    "typegen": "chakra typegen app/theme.ts --strict",
-    "graphql": "graphql-codegen --config ./.graphqlrc.yml --watch"
+    "generate:theme": "chakra typegen app/theme.ts --strict",
+    "generate:graphql": "graphql-codegen --config ./.graphqlrc.yml",
+    "generate:env": "dotenv-vault pull"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.5",
     "@graphql-codegen/introspection": "^4.0.3",
     "@graphql-codegen/typescript-operations": "^4.6.0",
     "@graphql-codegen/typescript-react-apollo": "^4.3.2",
-    "@types/react": "^19.1.1",
+    "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@vitejs/plugin-react": "^4.4.1",
+    "dotenv-vault": "^1.26.2",
     "prettier": "^3.5.3",
     "typescript": "^5.8.3",
+    "vercel": "^41.6.2",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "dependencies": {
-    "@apollo/client": "^3.13.7",
+    "@apollo/client": "^3.13.8",
     "@apollo/client-integration-tanstack-start": "^0.12.0-alpha.4",
     "@badrap/bar-of-progress": "^0.2.2",
-    "@chakra-ui/react": "^3.15.1",
+    "@chakra-ui/react": "^3.16.1",
     "@emotion/react": "^11.14.0",
     "@googlemaps/react-wrapper": "^1.2.0",
     "@prisma/client": "6.6.0",
-    "@tanstack/react-query": "^5.74.3",
-    "@tanstack/react-router": "^1.115.3",
-    "@tanstack/react-start": "^1.115.3",
+    "@sentry/tanstackstart-react": "^9.14.0",
+    "@tanstack/react-query": "^5.74.7",
+    "@tanstack/react-router": "^1.117.1",
+    "@tanstack/react-start": "^1.118.0",
     "@twemoji/svg": "^15.0.0",
     "apollo-link-scalars": "^4.0.3",
     "downshift": "^9.0.9",
     "formik": "^2.4.6",
-    "graphql": "^16.10.0",
+    "graphql": "^16.11.0",
     "graphql-scalars": "^1.24.2",
     "hex-rgb": "^5.0.0",
     "iban-ts": "^0.10.0",
-    "markdown-to-jsx": "^7.7.4",
+    "markdown-to-jsx": "^7.7.6",
     "markdown-to-txt": "^2.0.1",
     "photoswipe": "^5.4.4",
     "prisma": "^6.6.0",
@@ -55,7 +59,7 @@
     "react-use": "^17.6.0",
     "tomo-typeahead": "^0.0.6",
     "ts-ics": "^2.0.5",
-    "vinxi": "^0.5.4",
+    "vinxi": "^0.5.6",
     "zod": "^3.24.3",
     "zod-formik-adapter": "^1.3.0"
   }
