--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@googlemaps/react-wrapper": "^1.2.0",
     "@prisma/client": "6.6.0",
     "@sentry/tanstackstart-react": "^9.14.0",
+    "@sentry/vite-plugin": "^3.3.1",
     "@tanstack/react-query": "^5.74.7",
     "@tanstack/react-router": "^1.117.1",
     "@tanstack/react-start": "^1.118.0",
