--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test": "vitest"
   },
   "devDependencies": {
+    "@chakra-ui/cli": "^3.19.1",
     "@graphql-codegen/cli": "^5.0.6",
     "@graphql-codegen/introspection": "^4.0.3",
     "@graphql-codegen/typescript-operations": "^4.6.1",
@@ -55,6 +56,7 @@
     "iban-ts": "^0.10.0",
     "markdown-to-jsx": "^7.7.6",
     "markdown-to-txt": "^2.0.1",
+    "next-themes": "^0.4.6",
     "photoswipe": "^5.4.4",
     "prisma": "^6.8.2",
     "react": "^19.1.0",
