--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Deploy
 on:
   push:
     branches:
-      - tanstack
+      - main
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
