--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@emotion/react": "^11.14.0",
     "@googlemaps/react-wrapper": "^1.2.0",
     "@prisma/client": "6.16.3",
+    "@react-pdf/renderer": "^4.3.1",
     "@tanstack/nitro-v2-vite-plugin": "^1.132.40",
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-router": "^1.132.45",
@@ -55,6 +56,7 @@
     "iban-ts": "^0.10.0",
     "markdown-to-jsx": "^7.7.14",
     "markdown-to-txt": "^2.0.1",
+    "n2words": "^1.23.0",
     "next-themes": "^0.4.6",
     "photoswipe": "^5.4.4",
     "prisma": "^6.16.3",
