--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "markdown-to-txt": "^2.0.1",
     "n2words": "^1.23.1",
     "next-themes": "^0.4.6",
+    "normalize-url": "^8.1.0",
     "photoswipe": "^5.4.4",
     "prisma": "^6.19.0",
     "react": "^19.2.0",
