--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@types/google.maps": "^3.58.1",
     "@types/react": "^19.2.6",
     "@types/react-dom": "^19.2.3",
+    "@types/ws": "^8.18.1",
     "@vitejs/plugin-react": "^5.1.1",
+    "bufferutil": "^4.0.9",
     "dotenv-vault": "^1.27.0",
     "prettier": "^3.6.2",
     "typescript": "^5.9.3",
@@ -39,6 +41,8 @@
     "@date-fns/tz": "^1.4.1",
     "@emotion/react": "^11.14.0",
     "@googlemaps/react-wrapper": "^1.2.0",
+    "@neondatabase/serverless": "^1.0.2",
+    "@prisma/adapter-neon": "^7.0.1",
     "@prisma/client": "6.19.0",
     "@react-pdf/renderer": "^4.3.1",
     "@tanstack/nitro-v2-vite-plugin": "^1.139.0",
@@ -74,6 +78,7 @@
     "tomo-typeahead": "^0.0.6",
     "ts-ics": "^2.4.0",
     "vite": "^7.2.4",
+    "ws": "^8.18.3",
     "zod": "^4.1.12",
     "zod-formik-adapter": "^2.0.0"
   }
