--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "generate:theme": "chakra typegen app/theme.ts --strict",
     "generate:graphql": "graphql-codegen --config ./.graphqlrc.yml",
     "generate:env": "dotenv-vault pull",
-    "test": "vitest"
+    "test": "vitest",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@chakra-ui/cli": "^3.32.0",
