--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bufferutil": "^4.1.0",
     "dotenv-vault": "^1.27.0",
     "prettier": "^3.8.1",
+    "prisma": "^7.3.0",
     "typescript": "^5.9.3",
     "vercel": "^50.13.2",
     "vite-tsconfig-paths": "^6.0.5",
